// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Input renders a file input with custom label 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput3-label"
  >
    ID, passport, etc.
  </span>,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconUpload-l2nm3l-0 blPlnd'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput3-label"
      className="c1"
      id="fileInput3"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with custom label and placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput4-label"
  >
    Upload photo
  </span>,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconUpload-l2nm3l-0 blPlnd'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      ID, passport, etc.
    </span>
    <input
      aria-describedby="fileInput4-label"
      className="c1"
      id="fileInput4"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with custom placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput2-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconUpload-l2nm3l-0 blPlnd'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose a photo…
    </span>
    <input
      aria-describedby="fileInput2-label"
      className="c1"
      id="fileInput2"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders a file input with default placeholder 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput1-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconUpload-l2nm3l-0 blPlnd'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput1-label"
      className="c1"
      id="fileInput1"
      type="file"
    />
  </label>,
]
`;

exports[`File Input renders as error 1`] = `
Array [
  .c0 {
  display: block;
  font-size: 1rem;
  color: #8697A2;
  margin-bottom: 0.5rem;
}

<span
    className="c0"
    id="fileInput5-label"
  />,
  .c0 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 3.125rem;
  background-position: right 0.9375rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  border-color: #FF4E64;
  width: auto;
  position: relative;
  display: block;
  color: #8697A2;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697A2' class='IconUpload-l2nm3l-0 blPlnd'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
  border-color: #FF4E64;
}

.c0::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c0:hover:not(:focus) {
  border-color: #5A5F65;
}

.c0:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.c0:invalid,
.c0:-moz-ui-invalid {
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0:focus-within {
  border-color: #8697A2;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
    className="-label c0"
  >
    <span>
      Choose file…
    </span>
    <input
      aria-describedby="fileInput5-label"
      className="c1"
      id="fileInput5"
      type="file"
    />
  </label>,
]
`;
